# NoTimetoWaste

./: .gitattributes  .gitignore  Dockerfile  README.md  check_geojson_update.py  convert_to_geojson.py  convet_to_geojson_draft.py  developer.md  extract_valhalla.py  get_weather.py  incidents.geojson  incidents_geojson.py  no_incidents.csv  process_no_incidents.py  requirements.txt  road_midpoints.csv  road_midpoints1.csv  traffic.db  traffic_data.geojson  traffic_incidents.csv  update_agol_layer.py  weather_forecast.html
.github/workflows/: check-geojson-update.yml  update_agol.yml  update_geojson.yml  update_incidents_geojson.yml  update_process_no_incidents.yml  update_weather_forecast.yml
Challenge No Time To Waste/: Steckbrief_NoTimeToWaste.docx
Live_update/: README_live_update.md  convert_to_geojson.py  convet_to_geojson_draft.py  get_weather.py  incidents_geojson.py  no_incidents.csv  no_incidents.geojson  process_no_incidents.py  road_midpoints1.csv  traffic_data.geojson  weather_forecast.html
Live_update/docs/: index.html
__pycache__/: NoTimetoWaste.code-workspace
backend/: .gitignore  api.py  api_tsp_map.html  atkis_parser.py  atkis_widths_map.html  database.py  jena_truck_constraints_map.html  jena_valhalla_routing.html  main.py  map_visual.py  mapping.py  osmqueries.py  pyproject.toml  routes_cache.db  services.py  test_exclude.py  test_exclude2.py  test_valhalla.py  test_valhalla2.py  valhalla_comparison.html  valhalla_routing.py  valhalla_tsp_comparison.html
docs/: index.html
frontend/: index.html  package-lock.json  package.json
(+11 files in other folders)
