[project]
name = "notimetowaste"
version = "0.1.0"
description = "Backend of notimetowaste"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "mapclassify>=2.8.1",
    "osmnx>=2.0.7",
    "polyline>=2.0.4",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
